--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
 
-spring.datasource.url = jdbc:mysql://localhost:3306/szj
+spring.datasource.url = jdbc:mysql://192.168.1.4:3306/ssj
 spring.datasource.username = root
 spring.datasource.password = 223618
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
